<resources>
    <string name="app_name">Minhas Listas</string>
    <string name="btn_login">Login</string>
    <string name="text_email">E-mail</string>
    <string name="text_senha">Senha</string>
    <string name="logo_app">Minhas Listas</string>
    <string name="btn_register">Register</string>
    <string name="comece_a_adicionar_suas_listas">Comece a adicionar suas listas</string>
    <string name="mega_f_cil">é mega fácil</string>
    <string name="listas_de_compra">Listas de Compra</string>
    <string name="n_o_tem_conta_inscreva_se_agora">Não tem conta? Inscreva-se agora!</string>
<!--    <string name="default_web_client_id">23352328487-c4cmt2cjnj9c14cuarv532pnfu1eoahv.apps.googleusercontent.com</string>-->
    <string name="Title_menu_main">Menu</string>
    <string name="adicionar_item">Adicionar item</string>
    <string name="excluir">EXCLUIR</string>
    <string name="total_carrinho">Total carrinho: R$</string>
    <string name="nome_dialog">Nome:</string>
    <string name="quantidade_dialog">Quantidade:</string>
    <string name="valor_un_dialog">Valor UN:</string>
    <string name="dialog_add_item_btn_cancelar">Cancelar</string>
    <string name="btn_dialog_feito">Feito</string>
    <string name="dialog_add_list_criar">Criar</string>
    <string name="dialog_add_list_btn_cancelar">Cancelar</string>
    <string name="dialog_edit_list_btn_excluir">Cancelar</string>
    <string name="dialog_edit_item_btn_excluir">Excluir</string>
    <string name="dialog_add_list_hint_nome">Insira o nome da sua lista...</string>
    <string name="dialog_edit_list_salvar">Salvar</string>
    <string name="dialog_add_item_title">Adicionar Novo Item</string>
    <string name="dialog_add_list_title">Adicionar Nova Lista</string>
    <string name="dialog_edit_list_title">Alterar Lista</string>
    <string name="dialog_edit_item_title">Alterar Item</string>
    <string name="dialog_add_list_textview_mercado">Mercado</string>
    <string name="dialog_duplic_list_title">Duplicando Lista</string>
    <string name="dialog_duplic_list_hint_nome">Novo nome da lista</string>
    <string name="dialog_duplic_list_hint_mercado">Novo nome do mercado</string>
    <string name="dialog_duplica_list_btn_cancelar">Cancelar</string>
    <string name="menu_listitem_duplicar">Duplicar</string>
    <string name="menu_listitem_editar">Editar</string>
    <string name="menu_listitem_excluir">Excluir</string>
</resources>